force-app/main/default/objects/TriggerSettings__c/fields/IsAfterDelete__c.field-meta.xml
<CustomField>
    <fullName>IsAfterDelete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is After Delete</label>
    <type>Checkbox</type>
</CustomField>