force-app/main/default/objects/TriggerSettings__c/fields/IsAfterInsert__c.field-meta.xml
<CustomField>
    <fullName>IsAfterInsert__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is After Insert</label>
    <type>Checkbox</type>
</CustomField>