force-app/main/default/objects/TriggerSettings__c/fields/IsAfterUndelete__c.field-meta.xml
<CustomField>
    <fullName>IsAfterUndelete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is After Undelete</label>
    <type>Checkbox</type>
</CustomField>