force-app/main/default/objects/TriggerSettings__c/fields/IsAfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsAfterUpdate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is After Update</label>
    <type>Checkbox</type>
</CustomField>