force-app/main/default/objects/TriggerSettings__c/fields/IsBeforeDelete__c.field-meta.xml
<CustomField>
    <fullName>IsBeforeDelete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Before Delete</label>
    <type>Checkbox</type>
</CustomField>