force-app/main/default/objects/TriggerSettings__c/fields/IsBeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>IsBeforeInsert__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Before Insert</label>
    <type>Checkbox</type>
</CustomField>