force-app/main/default/objects/TriggerSettings__c/fields/IsBeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsBeforeUpdate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Before Update</label>
    <type>Checkbox</type>
</CustomField>