force-app/main/default/objects/TriggerSettings__c/fields/TriggerName__c.field-meta.xml
<CustomField>
    <fullName>TriggerName__c</fullName>
    <label>Trigger Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>