force-app/main/default/objects/TriggerSettings__c/listViews/Trigger_Settings.listView-meta.xml
<ListView>
    <fullName>Trigger_Settings</fullName>
    <columns>NAME</columns>
    <columns>ObjectName__c</columns>
    <columns>TriggerName__c</columns>
    <columns>IsActive__c</columns>
    <columns>IsTestMode__c</columns>
    <filterScope>Everything</filterScope>
    <label>Trigger Settings</label>
    <language>en_US</language>
</ListView>